--- a/style.css
+++ b/style.css
@@ -310,12 +310,12 @@ a{
 .user{
 	width: 120px;
 	height: 120px;
-	border-radius: 50px;
+	border-radius: 50%;
 }
 .profile img{
 	top: -60px;
 	position: absolute;
-	left: calc(50%-60px);
+	left: calc(50% - 60px);
 	/*border: 10px solid #fff;*/
 }
 .profile h3{
